# scitex-container

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/sphinx/: cli_reference.rst  conf.py  index.rst  installation.rst  mcp_reference.rst  quickstart.rst
docs/sphinx/api/: scitex_container.rst
scripts/: install-host-packages.sh  install_apptainer.sh  install_claude_code.sh  install_codex.sh  install_docker.sh  install_emacs.sh  install_formatter_linter.sh  install_gdu.sh  install_gemini.sh  install_gh.sh  install_google_chrome.sh  install_imagemagick.sh  install_mermaid.sh  install_nodejs.sh  install_nvidia_driver.sh  install_python.sh  install_ripgrep.sh  install_rust.sh  install_screen.sh  install_shell_formatter_linter.sh  install_texlive.sh  install_tldr.sh  install_tree.sh  install_uv.sh  install_yq.sh
src/scitex_container/: __init__.py  __main__.py  _snapshot.py  mcp_server.py
src/scitex_container/_cli/: __init__.py  _apptainer.py  _docker.py  _env_snapshot.py  _host.py  _mcp.py  _sandbox.py  _status.py
src/scitex_container/_mcp/: __init__.py  handlers.py
src/scitex_container/apptainer/: __init__.py  _build.py  _command_builder.py  _freeze.py  _sandbox.py  _sandbox_versioning.py  _status.py  _utils.py  _verify.py  _versioning.py
src/scitex_container/docker/: __init__.py  _compose.py  _mounts.py
src/scitex_container/host/: __init__.py  _mounts.py  _packages.py
tests/: test_import.py
